@@ -1,6 +1,6 @@
 #if !defined(lint) && !defined(__INSIGHT__)
 #include "libbk_compiler.h"
-UNUSED static const char libbk__rcsid[] = "$Id: b_ringdir.c,v 1.24 2007/05/02 05:45:06 dupuy Exp $";
+UNUSED static const char libbk__rcsid[] = "$Id: b_ringdir.c,v 1.25 2007/06/19 19:51:09 jtt Exp $";
 UNUSED static const char libbk__copyright[] = "Copyright (c) 2003";
 UNUSED static const char libbk__contact[] = "<projectbaka@baka.org>";
 #endif /* not lint */
@@ -1592,6 +1592,12 @@ bk_ringdir_get_status(bk_s B, const char *pattern, u_int32_t *current, u_int32_t
   int fd = -1;
   int errlevel;
 
+  if (!pattern || !current || !oldest || !max)
+  {
+    bk_error_printf(B, BK_ERR_ERR,"Illegal arguments\n");
+    BK_RETURN(B, -1);
+  }
+  
   if (BK_FLAG_ISSET(flags, BK_RINGDIR_FLAG_EWARN))
   {
     errlevel = BK_ERR_WARN;
@@ -1622,6 +1628,7 @@ bk_ringdir_get_status(bk_s B, const char *pattern, u_int32_t *current, u_int32_t
 
   free(max_filename);
   max_filename = NULL;
+
 
   len = sizeof(*max);
   do
@@ -1672,6 +1679,16 @@ bk_ringdir_get_status(bk_s B, const char *pattern, u_int32_t *current, u_int32_t
     fd = -1;
 
     *current = ntohl(*current);
+
+    /*
+     * If we haven't set the max yet, then let max==1 to prevent
+     * exceptions. The hope is that the value of max will actually be
+     * pretty irrelevent at the point and remain so until it actually set.
+     */
+    if (*max == 0)
+    {
+      *max = 1;
+    }
 
     *oldest = (*current + 1) % *max;
 
